# Astrocelerate

./: .gitattributes  .gitignore  Astrocelerate_Vulkan.sln  Astrocelerate_Vulkan.vcxproj  Astrocelerate_Vulkan.vcxproj.filters  Astrocelerate_v-0-1-alpha.sln  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CompileShaders.bat  GenerateDirectories.bat  LICENSE.txt  README-VN.md  README.md  SetupDebug.bat  SetupDebug.sh  SetupRelease.bat  SetupRelease.sh  SetupVisualStudioSolution.bat  vcpkg-configuration.json  vcpkg.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  simulation-inaccuracy.md
Astrocelerate_Vulkan/: Astrocelerate_Vulkan.cpp  Astrocelerate_Vulkan.h  Astrocelerate_Vulkan.vcxproj  Astrocelerate_Vulkan.vcxproj.filters  CMakeLists.txt  GenerateDirectories.bat  SetupRelease.bat  SetupVisualStudioSolution.bat
Astrocelerate_Vulkan/scripts/: GenerateDirectories.py  HeaderDirs.cmake  HeaderFiles.cmake  SourceFiles.cmake
Astrocelerate_Vulkan/src/: AppWindow.cpp  AppWindow.hpp  Application.cpp  Application.h  Constants.h  IncludesRefs.h  LoggingManager.h  LoggingManager.hpp  VulkanContexts.hpp
Astrocelerate_Vulkan/src/Engine/: Engine.cpp  Engine.hpp  Renderer.cpp  Renderer.h  Renderer.hpp
Astrocelerate_Vulkan/src/Vulkan/: VkDeviceManager.cpp  VkDeviceManager.hpp  VkInstanceManager.cpp  VkInstanceManager.hpp  VkSwapchainManager.cpp  VkSwapchainManager.hpp
OLD VS FILES/: CMakePresets.json
OLD VS FILES/TEST/: GenerateDirectories.bat  SetupVisualStudioSolution.bat
OLD VS FILES/TEST/scripts/: GenerateDirectories.py  HeaderDirs.cmake  HeaderFiles.cmake  SourceFiles.cmake
OpenGLProject/: OpenGLProject.vcxproj  OpenGLProject.vcxproj.filters
OpenGLProject/shaders/: basic.shd
OpenGLProject/src/: BufferObjects.cpp  BufferObjects.h  Constants.h  LoggingUtils.cpp  LoggingUtils.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  main.cpp
OpenGLProject/src/buffers/: BufferObjects.h  VertexArrayObject.cpp
OpenGLProject/src/objects/: Camera.cpp  Camera.h
OpenGLProject/src/rendering/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
OpenGLProject/src/utils/: KeyboardUtils.cpp  KeyboardUtils.h  LoggingUtils.cpp
assets/: DefaultFont.cpp  DefaultFont.hpp  FragmentMonoRegular.cpp  FragmentMonoRegular.hpp
compiled_shaders/: VertexShader.spv
configs/: ApplicationConfig.json  ApplicationConfig.yaml  DefaultImGuiConfig.ini
kernels/: earth_latest_high_prec.bpc  jup300.bsp  nep087.bsp  plu042.bsp  sat456.bsp  ura112.bsp
samples/: SP_SGP4Test-VNREDSat-1A.tle  SP_SGP4Test.yaml  SP_SatelliteOrbit.yaml  SP_SolarSystem.yaml  SatelliteInLEO.yaml  _debug.yaml  _debug_fast.yaml
samples/StressTests/: SP_2Body-100Satellites.yaml
samples/Templates/: Default.yaml
scripts/: Bootstrap.py  FindSPICE.cmake  GenerateDirectories.py  HeaderDirs.cmake  HeaderFiles.cmake  InstallerPatch.xml  InstallerUI.wxs  SourceFiles.cmake
src/: AppWindow.cpp  Application.cpp  ApplicationContext.hpp  Constants.h  GarbageCollector.cpp  GarbageCollector.hpp  IncludesRefs.h  LoggingManager.hpp  MemoryManager.cpp  MemoryManager.hpp  ServiceLocator.hpp  VulkanContexts.hpp  glm_config.hpp
src/Application/: Application.cpp  Engine.cpp  Engine.hpp  Session.cpp  Session.hpp
src/Core/: AppWindow.cpp  AppWindow.hpp  ApplicationContext.hpp  Constants.h  ECS.hpp  ECSCore.hpp  EventDispatcher.hpp  EventTypes.hpp  GarbageCollector.cpp  GarbageCollector.hpp  InputManager.cpp  InputManager.hpp  LoggingManager.cpp  LoggingManager.hpp  ServiceLocator.hpp
src/Core/Application/: AppWindow.cpp  AppWindow.hpp  EventDispatcher.hpp  GarbageCollector.cpp  GarbageCollector.hpp  LoggingManager.cpp  LoggingManager.hpp  ResourceManager.cpp  ResourceManager.hpp
src/Core/Data/: Application.hpp  Bodies.hpp  BoundedDeque.hpp  Buffer.hpp  Constants.cpp  Constants.h  Contexts.cpp  CoordSys.hpp  Device.hpp  EventTypes.hpp  GUI.hpp  Geometry.hpp  Input.hpp  Math.hpp  Physics.hpp  Tree.hpp  TripleBuffer.hpp  YAMLConversions.hpp  YAMLEntries.hpp  YAMLKeys.hpp
src/Core/Engine/: ECS.hpp  ECSCore.hpp  InputManager.cpp  InputManager.hpp  ServiceLocator.hpp
src/Core/Utils/: FilePathUtils.hpp  SPICEUtils.hpp  SpaceUtils.hpp  SystemUtils.hpp  YAMLUtils.hpp
src/CoreStructs/: ApplicationContext.hpp  Buffer.hpp  Contexts.cpp  Contexts.hpp  Device.hpp  GUI.hpp  Geometry.hpp  Input.hpp  Physics.hpp
src/CoreStructs/Contexts/: AppContext.hpp  CallbackContext.hpp  VulkanContext.hpp
src/Engine/: Engine.cpp  Engine.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/Engine/Components/: CommonComponents.hpp  ComponentTypes.hpp  CoreComponents.hpp  (+6 more)
src/Orchestration/: Application.cpp  Engine.cpp  Engine.hpp  Session.cpp  Session.hpp
src/Rendering/: GraphicsPipeline.cpp  GraphicsPipeline.hpp  RenderPipeline.cpp  RenderPipeline.hpp  Renderer.cpp  Renderer.hpp  TextureManager.cpp  TextureManager.hpp  UIRenderer.cpp  UIRenderer.hpp
src/Scene/: Camera.cpp  Camera.hpp  SceneManager.cpp  SceneManager.hpp
src/Shaders/: BufferManager.cpp  BufferManager.hpp  FragmentShader.glsl.frag  VertexBuffer.cpp  VertexBuffer.hpp  VertexShader.glsl.vert
src/Simulation/: ODEs.hpp
src/Systems/: PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  Time.hpp
src/Utils/: ColorUtils.hpp  FilePathUtils.hpp  ImGuiUtils.hpp  ModelLoader.cpp  ModelLoader.hpp  ModelParser.cpp  ModelParser.hpp  SPICEUtils.hpp  SpaceUtils.hpp  StringUtils.hpp  SubpassBinder.hpp  SystemUtils.hpp  TextureUtils.hpp  VulkanUtils.hpp  YAMLUtils.hpp
src/Vulkan/: VkBufferManager.cpp  VkBufferManager.hpp  VkCommandManager.cpp  VkCommandManager.hpp  VkCoreResourcesManager.cpp  VkCoreResourcesManager.hpp  VkDeviceManager.cpp  VkDeviceManager.hpp  VkImageManager.cpp  VkImageManager.hpp  VkInstanceManager.cpp  VkInstanceManager.hpp  VkPipelineManager.cpp  VkPipelineManager.hpp  VkSwapchainManager.cpp  VkSwapchainManager.hpp  VkSyncManager.cpp  VkSyncManager.hpp  VulkanContexts.hpp
(+219 files in other folders)
